# Transformer-Test

./: .gitignore  README.md  demo.py  evaluate.py  infer.py  mnist_demo.ipynb  pyproject.toml  requirements.txt  train.py  translation_demo.ipynb  webui.py
mnist/: __init__.py  demo.py  evaluate.py  infer.py  train.py
mnist/mnist_transformer/: __init__.py  config.py  model.py  utils.py
mnist_transformer/: config.py  data.py  model.py  trainer.py  utils.py
transformer/: __init__.py  config.py  data.py  model.py  train.py  trainer.py  translate.py  utils.py
