[project]
name = "transformer-test"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "gradio>=5.0.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
